--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h2. Xrope: Simple layout library for native as3 display objects.
 
 xrope is a lightweight layout library for native as3 display objects. No need for any framework or dependence. It only has simple layout for games and mini-sites. no feature common used in applications like auto-resize is supported.
 
-"Examples":http://eidiot.net/xman/xrope/
+"Examples":http://eidiot.github.com/xrope/
 
 h3. How to use it.
 
