--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h2. Xrope: Simple layout library for native as3 display objects.
 
-"Examples":http://eidiot.github.com/xrope/
+"Examples":http://eidiot.github.com/xrope/index.html#ExamplesLink | "Doc":http://eidiot.github.com/xrope/doc/
 
 h3. Features
 
@@ -23,6 +23,8 @@ h3. Done
 * HBoxLayout - Horizontal box layout. ("example":http://eidiot.github.com/xrope/index.html#HBoxExampleLink)
 * VBoxLayout - Vertical box layout.("example":http://eidiot.github.com/xrope/index.html#VBoxExampleLink)
 * AlignLayout - Align position group layout. ("example":http://eidiot.github.com/xrope/index.html#AlignExampleLink)
+
+*Note* difference between MultiLineLayout and BoxLayout: Lines in MultiLineLayout has the same height as the lineHeight property, while height of lines in HBoxLayout according to the max height of elements in each line.
 
 h3. Todo
 
