--- a/README.textile
+++ b/README.textile
@@ -5,7 +5,7 @@ h2. Xrope: Simple layout library for native as3 display objects.
 h3. Features
 
 * For native as3 display objects. No Flex or any other dependency.
-* AtomLayout align DisplayObject using getBounds(). No worries about register point in FLA.
+* AtomLayout align DisplayObject using _getBounds()_. No worries about register point in FLA. (Set _useBounds_ to _true_, it's _false_ by default)
 * Easily composite layout elements/groups. No more DisplayObjectContainer needed. ("example":http://eidiot.github.com/xrope/index.html#FormExampleLink)
 
 h3. How to use
